[FIX] helpdesk: fix kanban record width
In the commit https://github.com/odoo/enterprise/pull/38320/commits/c0da60afba1afc0c99e38ad1ee9eeb7f203dbb39
I fixed the layout for grouped kanban but I also broke
the layout for non grouped kanban.
This commit fixes the broken layout.

closes odoo/enterprise#38387

--- a/helpdesk/static/src/scss/helpdesk.scss
+++ b/helpdesk/static/src/scss/helpdesk.scss
@@ -1,6 +1,7 @@
 @include media-breakpoint-up(md) {
     .o_helpdesk_view.o_helpdesk_kanban {
         --KanbanGroup-width: #{map-get($grid-breakpoints, 'xl') * 0.35};
+        --KanbanRecord-width: #{map-get($grid-breakpoints, 'xl') * 0.35};
     }
 }
 
